fix header spacing

--- a/style.css
+++ b/style.css
@@ -157,9 +157,8 @@ header {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  align-items: center;
-  gap: 40px;
-  justify-content: center;
+  align-content: center;
+  gap: 60px;
   text-align: center;
 }
 
@@ -843,6 +842,8 @@ footer {
     padding: 80px 13% 40px 13%;
     grid-template-columns: 2fr 1fr;
     justify-items: end;
+    align-items: center;
+    justify-content: center;
     gap: 30px;
     text-align: left;
     background: linear-gradient(162deg, var(--secondary-bg-color) 60%, var(--primary-bg-color) 60%);
